--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.5.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@types/geojson": "^7946.0.16",
     "@types/mapbox-gl": "^3.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.11.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-map-gl": "^8.0.2"
+    "react-map-gl": "^8.0.2",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
